Animated SVGs do not clear previous frame completely in hidpi mode. https://bugs.webkit.org/show_bug.cgi?id=92395

Patch by Varun Jain <varunjain@chromium.org> on 2012-07-27
Reviewed by Darin Adler.

Source/WebCore:

The rect thats is cleared in subsequent frames needed to be scaled with device scale.

Test: svg/as-image/animated-svg-repaints-completely-in-hidpi.html

* svg/graphics/SVGImage.cpp:
(WebCore::SVGImage::drawSVGToImageBuffer):

LayoutTests:

* platform/chromium/TestExpectations:
* platform/mac/svg/as-image/animated-svg-repaints-completely-in-hidpi-expected.png: Added.
* platform/mac/svg/as-image/animated-svg-repaints-completely-in-hidpi-expected.txt: Added.
* svg/as-image/animated-svg-repaints-completely-in-hidpi.html: Added.
* svg/as-image/resources/animated-rect-fixed-size-3.svg: Added.

Canonical link: https://commits.webkit.org/110349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123914 268f45cc-cd09-0410-ab3c-d52691b4dbfc